test/bad/classes/name02.px

class A def
    x: Int

A, A = A, A
